# pycuda

./: .gitignore  .gitlab-ci.yml  .gitmodules  CITATION.cff  LICENSE  MANIFEST.in  Makefile.in  README  README.rst  README_SETUP.txt  aksetup_helper.py  configure.py  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml
doc/: Makefile  array.rst  conf.py  driver.rst  gl.rst  index.rst  install.rst  misc.rst  tutorial.rst  upload-docs.sh  util.rst
doc/source/: array.rst  conf.py  driver.rst  faq.rst  gl.rst  index.rst  install.rst  metaprog.rst  misc.rst  tutorial.rst  util.rst
doc/source/_static/: akdoc.css
doc/source/_templates/: layout.html
examples/: .gitignore  MORE_EXAMPLES_ON_THE_WIKI  cai_cupy_arrays.py  cai_numba.py  convolution.py  demo.py  demo_cdpSimplePrint.py  demo_complex.py  demo_elementwise.py  demo_graph.py  demo_meta_codepy.py  demo_meta_matrixmul_cheetah.py  demo_meta_matrixmul_cheetah.template.cu  demo_meta_template.py  demo_struct.py  download-examples-from-wiki.py  dump_properties.py  fill_gpu_with_nans.py  gl_interop.py  gpu-scalar-mult.py  hello_gpu.py  matrix-transpose.py  matrixmul_simple.py  matrixmul_tiled.py  median-filter.py  multiple_threads.py  plot_random_data.py  rotate.py  select-to-list.py  sparse-solve.py  test_gpuarray_speed.py  test_gpuarray_speed_random.py  test_math_speed.py  transpose.py
examples/fortran/: hello_gpu_f.py  phase_f.py
examples/from-wiki/: 2d_fft.py  2dfft.py  arithmetic_example.py  c++_function_templates.py  computing.py  convolution.py  demo_complex.py  demo_meta_cgen.py  demo_meta_matrixmul_cheetah.py  distance_element_wise3d.py  game_of_life.py  gl_interop.py  gpu_scalar_mult.py  kernel_concurrency.py  light_field_3d_viewer.py  mandelbrot.py  mandelbrot_interactive.py  manhattan_distance_for_2D_array.py  matrix_transpose.py  matrixmul_simple.py  matrixmul_tiled.py  measure_gpuarray_speed_random.py  multiple_threads.py  plot_random_data.py  rotate.py  select_to_list.py  simple_rgb2gray.py  simple_speed_test.py  sobel_filter.py  sparse_solve.py  threads_and_blocks.py  thrust_interop.py  using_printf.py
pycuda/: __init__.py  _cluda.py  _mymako.py  autoinit.py  autoprimaryctx.py  characterize.py  compiler.py  cumath.py  curandom.py  debug.py  deferred.py  driver.py  elementwise.py  fortran.py  gpuarray.py  reduction.py  rt.py  scan.py  tools.py
pycuda-bpl-subset/: libs  pycudaboost
pycuda/cuda/: pycuda-complex-impl.hpp  pycuda-complex.hpp  pycuda-helpers.hpp
pycuda/gl/: __init__.py  autoinit.py
pycuda/sparse/: __init__.py  cg.py  coordinate.py  inner.py  operator.py  packeted.py  pkt_build.py  pkt_build_cython.pyx
pycuda/sparse_matrix/: cg.py  inner.py  operator.py  packeted.py  pkt_build.py  pkt_build_cython.pyx
src/cpp/: bitlog.cpp  bitlog.hpp  cuda.cpp  cuda.hpp  cuda_gl.hpp  curand.hpp  mempool.hpp
src/cpp/pycuda/: pycuda.hpp
src/cuda/: pycuda-complex-impl.hpp  pycuda-complex.hpp  pycuda-helpers.hpp
src/python/: _kernel.py  autoinit.py  blas.py  compiler.py  cumath.py  curandom.py  driver.py  elementwise.py  gl.py  gpuarray.py  kernel.py  math.py  reduction.py  simplearray.py  tools.py  vector_expr.py
src/python/gl/: __init__.py  autoinit.py
src/wrapper/: _pvt_struct_v2.cpp  _pvt_struct_v3.cpp  _pycuda_struct.c  _pycuda_struct.cpp  mempool.cpp  numpy_init.hpp  tools.cpp  tools.hpp  wrap_cublas.cpp  wrap_cudadrv.cpp  wrap_cudagl.cpp  wrap_cudart.cpp  wrap_curand.cpp  wrap_helpers.hpp  wrap_main.cpp
test/: dump_properties.py  hello_gpu.py  test.py  test_abstract_array.py  test_blas.py  test_cublas_speed.py  test_cumath.py  test_driver.py  test_gpuarray.py  test_gpuarray_speed.py  test_graph.py  test_jit_link.py  test_math.py  test_scalar_sizes.py  test_simplearray.py  test_texture_nan.py
test/undistributed/: elwise-perf.py  measure_gpuarray_speed.py  reduction-perf.py  test_gpuarray_speed.py
