[build-system]

# For each Python version, build against the oldest numpy C_API_VERSION for
# which binary numpy wheels exist, and then the newest version of numpy
# implementing that C_API_VERSION.
requires = [
    "setuptools",
    "wheel",
    "numpy; python_version >= '3.10'",
    "numpy==1.19.5; python_version >= '3.8' and python_version < '3.10'",
    "numpy==1.15.4; python_version >= '3.7' and python_version < '3.8'",
    "numpy==1.12.1; python_version < '3.7'",
]
